--- a/tailwindtraders-mobile/TailwindTraders.Mobile.iOS/Info.plist
+++ b/tailwindtraders-mobile/TailwindTraders.Mobile.iOS/Info.plist
@@ -24,7 +24,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.microsoft.tailwindtradersbrian</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -67,5 +67,7 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 </dict>
 </plist>
